Fix spacing above CTA.

--- a/assets/sass/components/analytics-4/_googlesitekit-analytics-setup-module.scss
+++ b/assets/sass/components/analytics-4/_googlesitekit-analytics-setup-module.scss
@@ -80,6 +80,7 @@
 
 			.googlesitekit-analytics-setup__analytics-create-account-info {
 				margin-top: 1em;
+				padding-bottom: 6px;
 			}
 		}
 
